@startuml Entities relationship

enum Settings {
    FS (String)
}

enum StoragePath {
    FS (String)
}

enum Role {
    Admin
    User
}

entity User {
    * id : UUID
    --
    * login : String
    * password : String
    * external_id : String
    * role : Role
}
note top
    Represents the application's user.
end note

entity Storage {
    * id : UUID
    --
    * name : String
    * setting: Settings
}
note top
    Some place where all books are stored.
    Represent some physical storage like FS, S3, and etc.
end note

entity Tag {
    * id : UUID
    --
    * name : String
}
note top
    Allows to group books by some feature like: genre, author, and etc.
end note
entity Book {
    * id : UUID
    --
    * storage_id : UUID <<FK>>
    * title : String
    * path : StoragePath
    * uploader_id : UUID
}
note top
    The main entity.
    Holds imformation about uploaded book.
end note

entity Bookmark {
    * id : UUID
    --
    * book_id : UUID <<FK>>
    * page : uint
    * title : String
    * note : String
    * owner_id : UUID <<FK>>
}
note bottom
    Allows to make fast navigation bettwen book's pages and make some note.
end note

entity Highlight {
    * id : UUID
    --
    * book_id : UUID <<FK>>
    * page : uint
    * start : uint
    * end : uint
    * title : String
    * note : String
    * owner_id : UUID <<FK>>
}
note bottom
    Allows to highlight some part of the text and search it quickly.
end note

Book }o--|| Storage : storage_id
Book }o--o{ Tag
Book ||--|| User : uploader_id
Bookmark }o--|| Book : book_id
Bookmark ||--o{ User : owner_id
Highlight }o--|| Book : book_id
Highlight ||--o{ User : owner_id
Book -- StoragePath
Storage -- Settings
User -- Role

@enduml
